@@ -13,6 +13,13 @@ ifeq ($(KVER),smp)
   DEFINES += -D__BOOT_KERNEL_SMP=1 
   DEFINES += -D__BOOT_KERNEL_UP=0 
 endif
+# Ugh - Silly Kurt
+ifeq ($(KVER),ent)
+  DEFINES += -D__BOOT_KERNEL_ENTERPRISE=1
+  DEFINES += -D__BOOT_KERNEL_HUGEMEM=0
+  DEFINES += -D__BOOT_KERNEL_SMP=0 
+  DEFINES += -D__BOOT_KERNEL_UP=0 
+endif
 ifeq ($(KVER),enterprise)
   DEFINES += -D__BOOT_KERNEL_ENTERPRISE=1
   DEFINES += -D__BOOT_KERNEL_HUGEMEM=0
